--- a/fmapp2/res/values-af/arrays.xml
+++ b/fmapp2/res/values-af/arrays.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
  * Copyright (c) 2009, 2011-2013 The Linux Foundation. All rights reserved.
+ * Copyright (C) 2014 The CyanogenMod Project
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions are met:
@@ -31,35 +32,17 @@
     <item>Stereo</item>
     <item>Mono</item>
   </string-array>
-  <string-array name="ster_mon_values">
-    <item>0</item>
-    <item>1</item>
-  </string-array>
-
   <string-array name="record_durations_entries">
     <item>5 minute</item>
     <item>15 minute</item>
     <item>30 minute</item>
     <item>Tot gestop</item>
   </string-array>
-  <string-array name="record_duration_values">
-    <item>5</item>
-    <item>15</item>
-    <item>30</item>
-    <item>-1</item>
-  </string-array>
   <string-array name="sleep_duration_values">
     <item>15 minute</item>
     <item>30 minute</item>
     <item>45 minute</item>
     <item>1 uur</item>
-  </string-array>
-    <!-- This array should be in seconds and should match the values above -->
-  <string-array name="sleep_duration_values_seconds">
-    <item>900</item>
-    <item>1800</item>
-    <item>2700</item>
-    <item>3600</item>
   </string-array>
   <string-array name="search_category_rbds_entries">
     <item>Alle Stasies</item>
@@ -89,35 +72,6 @@
     <item>Besprekings</item>
     <item>Top 40</item>
     <item>Weer</item>
-  </string-array>
-  <string-array name="search_category_rbds_values">
-    <item>0</item>
-    <item>7</item>
-    <item>15</item>
-    <item>6</item>
-    <item>23</item>
-    <item>10</item>
-    <item>31</item>
-    <item>30</item>
-    <item>18</item>
-    <item>2</item>
-    <item>14</item>
-    <item>1</item>
-    <item>13</item>
-    <item>11</item>
-    <item>21</item>
-    <item>22</item>
-    <item>19</item>
-    <item>20</item>
-    <item>16</item>
-    <item>5</item>
-    <item>12</item>
-    <item>8</item>
-    <item>17</item>
-    <item>3</item>
-    <item>4</item>
-    <item>9</item>
-    <item>29</item>
   </string-array>
   <string-array name="search_category_rds_entries">
     <item>Al die stasies</item>
@@ -152,40 +106,6 @@
     <item>Reis</item>
     <item>Gevarieerde</item>
     <item>Weer</item>
-  </string-array>
-  <string-array name="search_category_rds_values">
-    <item>0</item>
-    <item>7</item>
-    <item>2</item>
-    <item>18</item>
-    <item>25</item>
-    <item>29</item>
-    <item>6</item>
-    <item>12</item>
-    <item>5</item>
-    <item>31</item>
-    <item>30</item>
-    <item>17</item>
-    <item>28</item>
-    <item>3</item>
-    <item>24</item>
-    <item>13</item>
-    <item>23</item>
-    <item>1</item>
-    <item>26</item>
-    <item>15</item>
-    <item>27</item>
-    <item>21</item>
-    <item>10</item>
-    <item>20</item>
-    <item>11</item>
-    <item>8</item>
-    <item>14</item>
-    <item>19</item>
-    <item>4</item>
-    <item>22</item>
-    <item>9</item>
-    <item>16</item>
   </string-array>
   <string-array name="presetlist_edit_category">
     <item>Hernoem</item>
@@ -231,45 +151,6 @@
     <item>Verenigde State van Amerika</item>
     <item>Gebruiker gedefinieerde Band</item>
   </string-array>
-  <string-array name="regional_band_values">
-    <item>0</item>
-    <item>1</item>
-    <item>2</item>
-    <item>3</item>
-    <item>4</item>
-    <item>5</item>
-    <item>6</item>
-    <item>7</item>
-    <item>8</item>
-    <item>9</item>
-    <item>10</item>
-    <item>11</item>
-    <item>12</item>
-    <item>13</item>
-    <item>14</item>
-    <item>15</item>
-    <item>16</item>
-    <item>17</item>
-    <item>18</item>
-    <item>19</item>
-    <item>20</item>
-    <item>21</item>
-    <item>22</item>
-    <item>23</item>
-    <item>24</item>
-    <item>25</item>
-    <item>26</item>
-    <item>27</item>
-    <item>28</item>
-    <item>29</item>
-    <item>30</item>
-    <item>31</item>
-    <item>32</item>
-    <item>33</item>
-    <item>34</item>
-    <item>35</item>
-    <item>36</item>
-  </string-array>
   <string-array name="regional_band_summary">
     <item>Noord Amerika (87.5MHz Tot 108.0MHz In 200 Khz Stappe)</item>
     <item>Europa (87.5MHz Tot 108.0MHz In 100 Khz Stappe)</item>
@@ -309,59 +190,9 @@
     <item>Verenigde State van Amerika (88.1MHz Tot 107.9MHz In 200 Khz Stappe)</item>
     <item>Gebruiker gedefinieerde Band</item>
   </string-array>
-  <string-array name="rf_cfg">
-      <item>Kry Huidige Stasie Parameters</item>
-      <item>Kry Stasie Parameters Herhaal 20 keer</item>
-      <item>Kry Soek stasie parameters</item>
-      <item>Kry FM Band vee parameters</item>
-      <item>Konfigureer Werkverrigting Parameters</item>
-  </string-array>
-  <string-array name="cfg_rf1">
-      <item>Stel FM RSSI Delta</item>
-      <item>Stel Signal drempelvlak</item>
-      <item>RF Statistiek</item>
-  </string-array>
-  <string-array name="cfg_rf2">
-      <item>Stel SINR Voorbeeld Telling</item>
-      <item>Stel SINR drempelvlak</item>
-      <item>Stel IntfDetoutLow drempelvlak</item>
-      <item>Stel IntfDetoutHigh drempelvlak</item>
-      <item>Stel SinrFirstStage</item>
-      <item>Stel RmssiFirstStage</item>
-      <item>Stel CF0Th12</item>
-      <item>Stel SearchAlgo Tipe</item>
-      <item>Kry SINR Voorbeld Telling</item>
-      <item>Kry SINR drempelvlak</item>
-      <item>Kry SinrFirstStage</item>
-      <item>Kry RmssiFirstStage</item>
-      <item>Kry CF0Th12</item>
-      <item>Kry Soek Algo Tipe</item>
-      <item>Stel AfJmpRmssi drempelvlak</item>
-      <item>Stel GoodChRmssi drempelvlak</item>
-      <item>Stel AfJmpRmssi Voorbeeld Telling</item>
-      <item>Kry AfJmpRmssi drempelvlak</item>
-      <item>Kry GoodChRmssi drempelvlak</item>
-      <item>Kry AfJmpRmssi Voorbeeld telling</item>
-      <item>RF Statistieke</item>
-      <item>Stel RXREPEAT Telling</item>
-  </string-array>
-  <string-array name="stats_options">
-      <item>Kies \'n opsie</item>
-      <item>Konfigureer Werkverrigting parameters</item>
-      <item>RF Statistieke</item>
-  </string-array>
-  <string-array name="channel_spacing_val">
-      <item>2</item>
-      <item>1</item>
-      <item>0</item>
-  </string-array>
   <string-array name="channel_spacing_entries">
       <item>50 Khz</item>
       <item>100 Khz</item>
       <item>200 Khz</item>
-  </string-array>
-  <string-array name="band_sweep_methods">
-      <item>Per hand</item>
-      <item>Vanaf Lêer</item>
   </string-array>
 </resources>
