--- a/fmapp2/res/values/arrays.xml
+++ b/fmapp2/res/values/arrays.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
  * Copyright (c) 2009, 2011-2013 The Linux Foundation. All rights reserved.
+ * Copyright (C) 2014 The CyanogenMod Project
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions are met:
@@ -33,7 +34,7 @@
     <item>Mono</item>
   </string-array>
 
-  <string-array name="ster_mon_values">
+  <string-array name="ster_mon_values" translatable="false">
     <item>0</item>
     <item>1</item>
   </string-array>
@@ -46,7 +47,7 @@
   </string-array>
 
 
-  <string-array name="record_duration_values">
+  <string-array name="record_duration_values" translatable="false">
     <item>5</item>
     <item>15</item>
     <item>30</item>
@@ -57,11 +58,11 @@
     <item>15 minutes</item>
     <item>30 minutes</item>
     <item>45 minutes</item>
-    <item>1 Hour</item>
+    <item>1 hour</item>
   </string-array>
 
     <!-- This array should be in seconds and should match the values above -->
-  <string-array name="sleep_duration_values_seconds">
+  <string-array name="sleep_duration_values_seconds" translatable="false">
     <item>900</item>
     <item>1800</item>
     <item>2700</item>
@@ -69,15 +70,15 @@
   </string-array>
 
   <string-array name="search_category_rbds_entries">
-    <item>All Stations</item>
-    <item>Adult Hits</item>
+    <item>All stations</item>
+    <item>Adult hits</item>
     <item>Classical</item>
     <item>Classic Rock</item>
     <item>College</item>
     <item>Country</item>
     <item>Emergency</item>
-    <item>Emergency Test</item>
-    <item>Foreign Language</item>
+    <item>Emergency test</item>
+    <item>Foreign language</item>
     <item>Information</item>
     <item>Jazz</item>
     <item>News</item>
@@ -85,8 +86,8 @@
     <item>Oldies</item>
     <item>Personality</item>
     <item>Public</item>
-    <item>Religious Music</item>
-    <item>Religious Talk</item>
+    <item>Religious music</item>
+    <item>Religious talk</item>
     <item>Rhythm and Blues</item>
     <item>Rock</item>
     <item>Soft</item>
@@ -98,7 +99,7 @@
     <item>Weather</item>
   </string-array>
 
-  <string-array name="search_category_rbds_values">
+  <string-array name="search_category_rbds_values" translatable="false">
     <item>0</item>
     <item>7</item>
     <item>15</item>
@@ -130,41 +131,41 @@
 
 
   <string-array name="search_category_rds_entries">
-    <item>All Stations</item>
+    <item>All stations</item>
     <item>Culture</item>
-    <item>Current Affairs</item>
+    <item>Current affairs</item>
     <item>Children programs</item>
-    <item>Country Music</item>
+    <item>Country music</item>
     <item>Documentary</item>
     <item>Drama</item>
-    <item>Easy Listening Music</item>
+    <item>Easy listening music</item>
     <item>Education</item>
     <item>Emergency</item>
-    <item>Emergency Test</item>
+    <item>Emergency test</item>
     <item>Finance</item>
-    <item>Folk Music</item>
+    <item>Folk music</item>
     <item>Information</item>
-    <item>Jazz Music</item>
+    <item>Jazz music</item>
     <item>Light classical</item>
     <item>Leisure</item>
     <item>News</item>
-    <item>National Music</item>
-    <item>Other Music</item>
-    <item>Oldies Music</item>
-    <item>Phone In</item>
-    <item>Pop Music</item>
+    <item>National music</item>
+    <item>Other music</item>
+    <item>Oldies music</item>
+    <item>Phone in</item>
+    <item>Pop music</item>
     <item>Religion</item>
-    <item>Rock Music</item>
+    <item>Rock music</item>
     <item>Science</item>
     <item>Serious classical</item>
-    <item>Social Affairs</item>
+    <item>Social affairs</item>
     <item>Sport</item>
     <item>Travel</item>
     <item>Varied</item>
     <item>Weather</item>
   </string-array>
 
-  <string-array name="search_category_rds_values">
+  <string-array name="search_category_rds_values" translatable="false">
     <item>0</item>
     <item>7</item>
     <item>2</item>
@@ -201,7 +202,7 @@
 
   <string-array name="presetlist_edit_category">
     <item>Rename</item>
-    <item>Auto-Select</item>
+    <item>Auto-select</item>
     <item>Delete</item>
   </string-array>
 
@@ -210,7 +211,7 @@
     <item>North America</item>
     <item>Europe</item>
     <item>Japan</item>
-    <item>Japan (Wide)</item>
+    <item>Japan (wide)</item>
     <item>Australia</item>
     <item>Austria</item>
     <item>Belgium</item>
@@ -243,10 +244,10 @@
     <item>Turkey</item>
     <item>United Kingdom </item>
     <item>United States</item>
-    <item>User Defined Band</item>
+    <item>User defined band</item>
   </string-array>
 
-  <string-array name="regional_band_values">
+  <string-array name="regional_band_values" translatable="false">
     <item>0</item>
     <item>1</item>
     <item>2</item>
@@ -287,46 +288,46 @@
   </string-array>
 
   <string-array name="regional_band_summary">
-    <item>North America (87.5MHz To 108.0MHz In 200 Khz Steps)</item>
-    <item>Europe (87.5MHz To 108.0MHz In 100 Khz Steps)</item>
-    <item>Japan (76.0MHz To  90.0MHz In 100 Khz Steps)</item>
-    <item>Japan (Wide) (90.0MHz To 108.0MHz In 50 Khz Steps)</item>
-    <item>Australia (87.7MHz To 108.0MHz In 100 Khz Steps)</item>
-    <item>Austria (87.5MHz To 108.0MHz In  50 Khz Steps)</item>
-    <item>Belgium (87.5MHz To 108.0MHz In 100 Khz Steps)</item>
-    <item>Brazil (87.5MHz To 108.0MHz In 200 Khz Step)</item>
-    <item>China (87.0MHz To 108.0MHz In 100 Khz Steps)</item>
-    <item>Czech (87.5MHz To 108.0MHz In 100 Khz Steps)</item>
-    <item>Denmark (87.5MHz To 108.0MHz In 50 Khz Steps)</item>
-    <item>Finland (87.5MHz To 108.0MHz In 100 Khz Steps)</item>
-    <item>France (87.5MHz To 108.0MHz In 100 Khz Steps)</item>
-    <item>Germany (87.5MHz To 108.0MHz In 50 Khz Steps)</item>
-    <item>Greece (87.5MHz To 108.0MHz In 50 Khz Steps)</item>
-    <item>Hong Kong (87.5MHz To 108.0MHz In 100 Khz Steps)</item>
-    <item>India (91.0MHz To 106.4MHz In 100 Khz Steps)</item>
-    <item>Ireland (87.5MHz To 108.0MHz In 50 Khz Steps)</item>
-    <item>Italy (87.5MHz To 108.0MHz In 50 Khz Steps)</item>
-    <item>Korea (87.5MHz To 108.0MHz In 200 Khz Steps)</item>
-    <item>Mexico (88.1MHz To 107.9MHz In 200 Khz Steps)</item>
-    <item>Netherlands (87.5MHz To 108.0MHz In 100 Khz Steps)</item>
-    <item>New Zealand (88.0MHz To 107.0MHz In 100 Khz Steps)</item>
-    <item>Norway (87.5MHz To 108.0MHz In 100 Khz Steps)</item>
-    <item>Poland (87.5MHz To 108.0MHz In 100 Khz Steps)</item>
-    <item>Portugal (87.5MHz To 108.0MHz In 50 Khz Steps)</item>
-    <item>Russia (87.5MHz To 108.0MHz In 100 Khz Steps)</item>
-    <item>Singapore (88.0MHz To 108.0MHz In 100 Khz Steps)</item>
-    <item>Slovakia (87.5MHz To 108.0MHz In 100 Khz Steps)</item>
-    <item>Spain (87.5MHz To 108.0MHz In 100 Khz Steps)</item>
-    <item>Switzerland (87.5MHz To 108.0MHz In 100 Khz Steps)</item>
-    <item>Sweden (87.5MHz To 108.0MHz In 100 Khz Steps)</item>
-    <item>Taiwan (87.5MHz To 108.0MHz In 100 Khz Steps)</item>
-    <item>Turkey (87.5MHz To 108.0MHz In 100 Khz Steps)</item>
-    <item>United Kingdom (87.5MHz To 108.0MHz In 100 Khz Steps)</item>
-    <item>United States (88.1MHz To 107.9MHz In 200 Khz Steps)</item>
-    <item>User Defined Band</item>
+    <item>North America (87.5MHz to 108.0MHz in 200 KHz steps)</item>
+    <item>Europe (87.5MHz to 108.0MHz in 100 KHz steps)</item>
+    <item>Japan (76.0MHz to  90.0MHz in 100 KHz steps)</item>
+    <item>Japan (wide) (90.0MHz to 108.0MHz in 50 KHz steps)</item>
+    <item>Australia (87.7MHz to 108.0MHz in 100 KHz steps)</item>
+    <item>Austria (87.5MHz to 108.0MHz in  50 KHz steps)</item>
+    <item>Belgium (87.5MHz to 108.0MHz in 100 KHz steps)</item>
+    <item>Brazil (87.5MHz to 108.0MHz in 200 KHz steps)</item>
+    <item>China (87.0MHz to 108.0MHz in 100 KHz steps)</item>
+    <item>Czech (87.5MHz to 108.0MHz in 100 KHz steps)</item>
+    <item>Denmark (87.5MHz to 108.0MHz in 50 KHz steps)</item>
+    <item>Finland (87.5MHz to 108.0MHz in 100 KHz steps)</item>
+    <item>France (87.5MHz to 108.0MHz in 100 KHz steps)</item>
+    <item>Germany (87.5MHz to 108.0MHz in 50 KHz steps)</item>
+    <item>Greece (87.5MHz to 108.0MHz in 50 KHz steps)</item>
+    <item>Hong Kong (87.5MHz to 108.0MHz in 100 KHz steps)</item>
+    <item>India (91.0MHz to 106.4MHz in 100 KHz steps)</item>
+    <item>Ireland (87.5MHz to 108.0MHz in 50 KHz steps)</item>
+    <item>Italy (87.5MHz to 108.0MHz in 50 KHz steps)</item>
+    <item>Korea (87.5MHz to 108.0MHz in 200 KHz steps)</item>
+    <item>Mexico (88.1MHz to 107.9MHz in 200 KHz steps)</item>
+    <item>Netherlands (87.5MHz to 108.0MHz in 100 KHz steps)</item>
+    <item>New Zealand (88.0MHz to 107.0MHz in 100 KHz steps)</item>
+    <item>Norway (87.5MHz to 108.0MHz in 100 KHz steps)</item>
+    <item>Poland (87.5MHz to 108.0MHz in 100 KHz steps)</item>
+    <item>Portugal (87.5MHz to 108.0MHz in 50 KHz steps)</item>
+    <item>Russia (87.5MHz to 108.0MHz in 100 KHz steps)</item>
+    <item>Singapore (88.0MHz to 108.0MHz in 100 KHz steps)</item>
+    <item>Slovakia (87.5MHz to 108.0MHz in 100 KHz steps)</item>
+    <item>Spain (87.5MHz to 108.0MHz in 100 KHz steps)</item>
+    <item>Switzerland (87.5MHz to 108.0MHz in 100 KHz steps)</item>
+    <item>Sweden (87.5MHz to 108.0MHz in 100 KHz steps)</item>
+    <item>Taiwan (87.5MHz to 108.0MHz in 100 KHz steps)</item>
+    <item>Turkey (87.5MHz to 108.0MHz in 100 KHz steps)</item>
+    <item>United Kingdom (87.5MHz to 108.0MHz in 100 KHz steps)</item>
+    <item>United States (88.1MHz to 107.9MHz in 200 KHz steps)</item>
+    <item>User defined band</item>
   </string-array>
 
-  <string-array name="rf_cfg">
+  <string-array name="rf_cfg" translatable="false">
       <item> Get Current Station Parameters</item>
       <item> Get Station Parameters Repeat 20 times</item>
       <item> Get Search  station parameters</item>
@@ -334,13 +335,13 @@
       <item> Configure Performance Parameters</item>
   </string-array>
 
-  <string-array name="cfg_rf1">
+  <string-array name="cfg_rf1" translatable="false">
       <item> Set FM RSSI Delta</item>
       <item> Set Signal Threshold</item>
       <item> RF Statistics</item>
   </string-array>
 
-  <string-array name="cfg_rf2">
+  <string-array name="cfg_rf2" translatable="false">
       <item> Set SINR Samples Count</item>
       <item> Set SINR Threshold</item>
       <item> Set IntfDetoutLow Threshold</item>
@@ -365,25 +366,25 @@
       <item> Set RXREPEAT Count</item>
   </string-array>
 
-  <string-array name="stats_options">
+  <string-array name="stats_options" translatable="false">
       <item> Select the option</item>
       <item> Configure Performance parameters</item>
       <item> RF Statistics</item>
   </string-array>
 
-  <string-array name="channel_spacing_val">
+  <string-array name="channel_spacing_val" translatable="false">
       <item>2</item>
       <item>1</item>
       <item>0</item>
   </string-array>
 
   <string-array name="channel_spacing_entries">
-      <item>50 Khz</item>
-      <item>100 Khz</item>
-      <item>200 Khz</item>
+      <item>50 KHz</item>
+      <item>100 KHz</item>
+      <item>200 KHz</item>
   </string-array>
 
-  <string-array name="band_sweep_methods">
+  <string-array name="band_sweep_methods" translatable="false">
       <item>Manual</item>
       <item>From File</item>
   </string-array>
